# open_gl_renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  auto_build.bat  auto_build_cmake.sh  auto_build_wo_cmake.bat  clean_auto_build_cmake.sh  main.cpp  shader.cpp  shader.h  window.cpp  window.h
shaders/: fragment.frag  fragment_2.frag  fragment_yellow.frag  vertex.vert
src/: main.cpp  shader.cpp  window.cpp  window.h
